--- a/style.css
+++ b/style.css
@@ -12,12 +12,18 @@ body{
 
 #sedans{
     background-color: hsl(31, 77%, 52%);
+    width: 18%;
+    height: 65%;
 }
 
 #suvs{
     background-color: hsl(184, 100%, 22%);
+    width: 18%;
+    height: 65%;
 }
 
 #luxury{
     background-color: hsl(179, 100%, 13%);
+    width: 18%;
+    height: 65%;
 }
