--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     background-color: hsl(0, 0%, 95%);
+    text-align: start;
 }
 
 .container{
@@ -10,10 +11,25 @@ body{
     align-items: center;
 }
 
+p{
+    color: hsla(0, 0%, 100%, 0.75);
+    font-size: 15px;
+    font-family: 'Lexend Deca', sans-serif;
+}
+
+h2{
+    color: hsl(0, 0%, 95%);
+    font-family: 'Big Shoulders Display', sans-serif;
+}
+
 #sedans{
     background-color: hsl(31, 77%, 52%);
     width: 18%;
     height: 65%;
+}
+
+#sedans .learnMore{
+    color: hsl(31, 77%, 52%);;
 }
 
 #suvs{
@@ -22,8 +38,25 @@ body{
     height: 65%;
 }
 
+#suvs .learnMore{
+    color: hsl(184, 100%, 22%);;
+}
+
 #luxury{
     background-color: hsl(179, 100%, 13%);
     width: 18%;
     height: 65%;
+}
+
+#luxury .learnMore{
+    color: hsl(179, 100%, 13%);
+}
+
+.learnMore{
+    background-color: hsl(0, 0%, 95%);
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-radius: 20px;
 }
