--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body{
     align-items: center;
 }
 
+.card{
+    
+}
+
 p{
     color: hsla(0, 0%, 100%, 0.75);
     font-size: 15px;
@@ -28,7 +32,7 @@ h2{
     height: 65%;
 }
 
-#sedans .btn{
+#sedans .learnMore{
     color: hsl(31, 77%, 52%);;
 }
 
@@ -38,7 +42,7 @@ h2{
     height: 65%;
 }
 
-#suvs .btn{
+#suvs .learnMore{
     color: hsl(184, 100%, 22%);;
 }
 
@@ -48,11 +52,11 @@ h2{
     height: 65%;
 }
 
-#luxury .btn{
+#luxury .learnMore{
     color: hsl(179, 100%, 13%);
 }
 
-.btn{
+.learnMore{
     background-color: hsl(0, 0%, 95%);
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
