--- a/style.css
+++ b/style.css
@@ -12,55 +12,74 @@ body{
 }
 
 .card{
-    
+    overflow-wrap: break-word;
+    position: relative;
+    padding: 1.5rem 1.5rem 0rem 1.5rem; 
 }
 
 p{
     color: hsla(0, 0%, 100%, 0.75);
     font-size: 15px;
+    line-height: 30px;
     font-family: 'Lexend Deca', sans-serif;
+    padding: 10px 40px 10px 10px;
+    margin: 20px 15px 10px 10px;
 }
 
 h2{
     color: hsl(0, 0%, 95%);
     font-family: 'Big Shoulders Display', sans-serif;
+    padding: 10px;
+    margin: 10px;
+}
+
+img{
+    margin: 10px;
 }
 
 #sedans{
     background-color: hsl(31, 77%, 52%);
-    width: 18%;
-    height: 65%;
+    width: 15%;
+    height: 55%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
-#sedans .learnMore{
+#sedans .btn{
     color: hsl(31, 77%, 52%);;
 }
 
 #suvs{
     background-color: hsl(184, 100%, 22%);
-    width: 18%;
-    height: 65%;
+    width: 15%;
+    height: 55%;
 }
 
-#suvs .learnMore{
+#suvs .btn{
     color: hsl(184, 100%, 22%);;
 }
 
 #luxury{
     background-color: hsl(179, 100%, 13%);
-    width: 18%;
-    height: 65%;
+    width: 15%;
+    height: 55%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
-#luxury .learnMore{
+#luxury .btn{
     color: hsl(179, 100%, 13%);
 }
 
-.learnMore{
+.btn{
     background-color: hsl(0, 0%, 95%);
-    border-top: 10px solid transparent;
-    border-bottom: 10px solid transparent;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-radius: 20px;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    border-radius: 25px;
+    font-family: 'Lexend Deca', sans-serif;
+    margin: 20px;
+    position: absolute;
+    bottom: 30px;
 }
