Change font size to h2 headers to 26pt

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ p{
 }
 
 h2{
+    font-size: 26pt;
     color: hsl(0, 0%, 95%);
     font-family: 'Big Shoulders Display', sans-serif;
     padding: 10px;
