--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ body{
 .card{
     overflow-wrap: break-word;
     position: relative;
-    padding: 1.5rem 1.5rem 0rem 1.5rem; 
+    width: 15%;
+    height: 55%;
+    padding: 1.5rem; 
 }
 
 p{
@@ -40,8 +42,7 @@ img{
 
 #sedans{
     background-color: hsl(31, 77%, 52%);
-    width: 15%;
-    height: 55%;
+   
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
@@ -52,8 +53,6 @@ img{
 
 #suvs{
     background-color: hsl(184, 100%, 22%);
-    width: 15%;
-    height: 55%;
 }
 
 #suvs .btn{
@@ -62,8 +61,6 @@ img{
 
 #luxury{
     background-color: hsl(179, 100%, 13%);
-    width: 15%;
-    height: 55%;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -83,4 +80,39 @@ img{
     margin: 20px;
     position: absolute;
     bottom: 30px;
+}
+
+@media (max-width: 375px){
+    .container{
+        flex-direction: column;
+        margin: 100% 11%;
+    }
+
+    .card{
+        width: 100%;
+    }
+
+    #sedans{
+        border-bottom-left-radius: 0;
+        border-top-right-radius: 10px;
+    }
+
+    #luxury{
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 10px;
+    }
+
+    .btn{
+        position:relative;
+        bottom: 10px;
+    }
+
+    p{
+        padding: 0.5rem;
+    }
+
+    .attribution{
+        margin-bottom: 10px;
+    }
+
 }
