--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 
 .container{
     display: flex;
-    height: 98vh;
+    height: 100vh;
     justify-content: center;
     align-items: center;
 }
@@ -48,7 +48,7 @@ img{
 }
 
 #sedans .btn{
-    color: hsl(31, 77%, 52%);;
+    color: hsl(31, 77%, 52%);
 }
 
 #suvs{
@@ -56,7 +56,7 @@ img{
 }
 
 #suvs .btn{
-    color: hsl(184, 100%, 22%);;
+    color: hsl(184, 100%, 22%);
 }
 
 #luxury{
@@ -71,15 +71,19 @@ img{
 
 .btn{
     background-color: hsl(0, 0%, 95%);
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
+    padding: 15px 25px 15px 25px;
+    border-color: transparent;
     border-radius: 25px;
     font-family: 'Lexend Deca', sans-serif;
     margin: 20px;
     position: absolute;
     bottom: 30px;
+}
+
+.btn:active{
+    background-color: transparent ;
+    color: hsl(0, 0%, 95%) !important;
+    border-color: hsl(0, 0%, 95%) !important;
 }
 
 @media (max-width: 375px){
