--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     position: relative;
     width: 15%;
     height: 55%;
-    padding: 1.5rem; 
+    padding:1.5rem; 
 }
 
 p{
@@ -24,8 +24,8 @@ p{
     font-size: 15px;
     line-height: 30px;
     font-family: 'Lexend Deca', sans-serif;
-    padding: 10px 40px 10px 10px;
-    margin: 20px 15px 10px 10px;
+    padding: 10px;
+    margin: 10px;
 }
 
 h2{
@@ -77,7 +77,7 @@ img{
     font-family: 'Lexend Deca', sans-serif;
     margin: 20px;
     position: absolute;
-    bottom: 30px;
+    bottom: 20px;
 }
 
 .btn:active{
