--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ img{
 .btn:active{
     background-color: transparent ;
     color: hsl(0, 0%, 95%) !important;
-    border-color: hsl(0, 0%, 95%) !important;
+    border-color: hsl(0, 0%, 95%);
 }
 
 @media (max-width: 399px){
@@ -124,7 +124,7 @@ img{
 @media (min-width: 920px) and (max-width: 1225px){
 
     .card{
-        width: 20%;
+        width: 27%;
     }
 }
 
