--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ img{
     color: hsl(228, 45%, 44%); 
 }
 
-@media (min-width: 652px) {
+@media (min-width: 40em) {
     .container{
         height: 100vh;
         justify-content: center;
@@ -102,35 +102,35 @@ img{
     }
 
     .card{
-        height: 28rem;
-        max-width: 14rem;
+        height: 28em;
+        max-width: 14em;
         position: relative;
     }
 
     h2{
-        font-size: 2.3rem;
+        font-size: 2.3em;
     }
 
     .sedan{
 
-        border-top-right-radius: 0rem;
-        border-bottom-left-radius: 1rem;
-        margin-top: 0rem;
+        border-top-right-radius: 0em;
+        border-bottom-left-radius: 1em;
+        margin-top: 0em;
     }
 
     .luxury{
-        border-top-right-radius: 1rem;
-        border-bottom-left-radius: 0rem;
+        border-top-right-radius: 1em;
+        border-bottom-left-radius: 0em;
     }
 
     .btn{
         position: absolute;
-        bottom: 3rem;
+        bottom: 3em;
     }
 
     .btn:active{
         background-color: transparent;
-        border: 0.15rem solid hsl(0, 0%, 95%);
+        border: 0.15em solid hsl(0, 0%, 95%);
         color: hsl(0, 0%, 95%);
     }
 }
