remove duplicate main component

--- a/style.css
+++ b/style.css
@@ -80,9 +80,11 @@ img{
 }
 
 .attribution { 
-    padding: 0.8rem;
-    font-size: 0.8rem; 
+    margin: 0;
+    color: black;
+    font-size: 0.7rem; 
     text-align: center; 
+    margin-top: 1rem;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
