--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 h2{
     margin: 0;
-    margin-top: 1.5rem;
+    margin-top: 0.5rem;
     font-family: 'Big Shoulders Display', sans-serif;
     color: hsl(0, 0%, 95%);
     font-size: 2rem;
@@ -13,10 +13,8 @@ h2{
 
 p{
     margin: 0;
-    margin-top: 1.5rem;
     font-family: 'Lexend Deca', sans-serif;
     color: hsla(0, 0%, 100%, 0.75);
-    max-width: 16rem;
     font-size: 1rem;
     line-height: 1.5;
 }
@@ -26,32 +24,50 @@ img{
 }
 
 .container{
-    height: 160vh;
+    height: 165svh;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
-    text-align: start;
 }
 
 .column-card{
-    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 20rem;
 }
 
 .card{
-    max-width: 20rem;
-    height: 22rem;
-    padding: 2.5rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1.5rem;
+    padding: 2.5rem;
+}
+
+.card p {
+    flex-grow: 1;
 }
 
 .sedan-card{
     background-color: hsl(31, 77%, 52%);
-    margin-top: 1rem;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
 }
 
-.sedan .btn{
+.btn{
+    background-color: hsl(0, 0%, 95%);
+    border: none;
+    border-radius: 2rem;
+    padding: 1em 2em;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+.sedan-card .btn{
     color: hsl(31, 77%, 52%);
 }
 
@@ -59,7 +75,7 @@ img{
     background-color: hsl(184, 100%, 22%);
 }
 
-.suv .btn{
+.suv-card .btn{
     color: hsl(184, 100%, 22%);
 }
 
@@ -69,62 +85,57 @@ img{
     border-bottom-right-radius: 1rem;
 }
 
-.luxury .btn{
+.luxury-card .btn{
     color: hsl(179, 100%, 13%);
 }
 
-.btn{
-    position: relative;
-    top: 2rem;
-    background-color: hsl(0, 0%, 95%);
-    border: none;
-    border-radius: 2rem;
-    padding: 1em 2em;
-    margin-top: 1rem;
-    font-family: 'Lexend Deca', sans-serif;
-    font-size: 0.9rem;
+footer{
+    margin-bottom: 1rem;
 }
 
 .attribution { 
     color: black;
-    font-size: 0.7rem; 
+    font-size: 0.8rem; 
     text-align: center; 
 }
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: hsl(228, 45%, 44%);
+    text-decoration: none; 
 }
 
-@media (min-width: 40em) {
+@media (min-width: 54.5em) {
     .container{
         height: 100vh;
-        justify-content: center;
+        flex-direction: row;
     }
 
     .column-card{
         display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 0rem;
+        flex-direction: row;
+        width: 54.5em;
+        height: 31em;
     }
 
     .card{
-        height: 28em;
-        max-width: 14em;
         position: relative;
+        justify-content: flex-start;
     }
 
-    h2{
+    .card h2{
         font-size: 2.3em;
     }
 
-    .sedan{
+    .card p {
+        font-size: 0.95em;
+    }
 
+    .sedan-card{
         border-top-right-radius: 0em;
         border-bottom-left-radius: 1em;
         margin-top: 0em;
     }
 
-    .luxury{
+    .luxury-card{
         border-top-right-radius: 1em;
         border-bottom-left-radius: 0em;
     }
