--- a/style.css
+++ b/style.css
@@ -1,26 +1,23 @@
 *, *::after, *::before{
     box-sizing: border-box;
+    margin-top: 0;
 }
 
 body{
     margin: 0;
     background-color: hsl(0, 0%, 95%);
+    color: hsl(0, 0%, 95%);
+    line-height: 1.5;
 }
 
-h2{
-    margin: 0;
-    margin-top: 0.5rem;
+.card-title{
     font-family: 'Big Shoulders Display', sans-serif;
-    color: hsl(0, 0%, 95%);
     font-size: 2rem;
 }
 
-p{
-    margin: 0;
+.card-description{
     font-family: 'Lexend Deca', sans-serif;
     color: hsla(0, 0%, 100%, 0.75);
-    font-size: 1rem;
-    line-height: 1.5;
 }
 
 img{
