replace content display from flex to grid

--- a/style.css
+++ b/style.css
@@ -10,32 +10,13 @@ body{
     line-height: 1.5;
 }
 
-.card-title{
-    font-family: 'Big Shoulders Display', sans-serif;
-    font-size: 2rem;
-}
-
-.card-description{
-    font-family: 'Lexend Deca', sans-serif;
-    color: hsla(0, 0%, 100%, 0.75);
-}
-
-img{
-    width: 4.2rem;
+.content{
+    height: 100svh;
+    display: grid;
+    place-items: center;
 }
 
 .container{
-    height: 100svh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.column-card{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 20rem;
 }
 
