--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *, *::after, *::before{
     box-sizing: border-box;
-    margin-top: 0;
+    margin: 0;
 }
 
 body{
@@ -26,7 +26,8 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    padding: 2rem 2.5rem;
+    gap: 1.5rem;
+    padding: 2.5rem;
 }
 
 .sedan-card{
@@ -58,7 +59,7 @@ body{
     padding: 1em 2em;
     font-family: 'Lexend Deca', sans-serif;
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 700;
 }
 
