--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body{
 }
 
 .sedan-card .btn{
-    color: hsl(31, 77%, 52%);
+    color: hsla(31, 77%, 52%, 0.8);
 }
 
 .suv-card{
@@ -72,7 +72,7 @@ body{
 }
 
 .suv-card .btn{
-    color: hsl(184, 100%, 22%);
+    color: hsla(184, 100%, 22%, 0.8);
 }
 
 .luxury-card{
@@ -82,7 +82,7 @@ body{
 }
 
 .luxury-card .btn{
-    color: hsl(179, 100%, 13%);
+    color: hsla(179, 100%, 13%, 0.8);
 }
 
 .attribution { 
