--- a/style.css
+++ b/style.css
@@ -94,47 +94,18 @@ body{
     color: hsl(228, 45%, 44%); 
 }
 
-@media (min-width: 54.5em) {
-    .container{
-        height: 100vh;
-        flex-direction: row;
+@media (min-width: 50rem) {
+    .content{
+        min-height: 100vh;
     }
 
-    .column-card{
+    .container{
         display: flex;
         flex-direction: row;
-        width: 54.5em;
-        height: 31em;
+        width: 50rem;
+        margin: 0;
     }
 
-    .card{
-        position: relative;
-        justify-content: flex-start;
-    }
-
-    .card h2{
-        font-size: 2.3em;
-    }
-
-    .card p {
-        font-size: 0.95em;
-    }
-
-    .sedan-card{
-        border-top-right-radius: 0em;
-        border-bottom-left-radius: 1em;
-        margin-top: 0em;
-    }
-
-    .luxury-card{
-        border-top-right-radius: 1em;
-        border-bottom-left-radius: 0em;
-    }
-
-    .btn{
-        position: absolute;
-        bottom: 3em;
-    }
 
     .btn:active{
         background-color: transparent;
