--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+:root{
+  --clr-primary-400:hsl(31, 77%, 52%);
+  --clr-primary-700: hsl(184, 100%, 22%);
+  --clr-primary-900: hsl(179, 100%, 13%);
+  --clr-neutral-100: hsl(0, 0%, 95%);
+  --clr-neutral-200: hsla(0, 0%, 100%, 0.75);
+
+  --ff-base: 'Lexend Deca', sans-serif;
+  --ff-accent: 'Big Shoulders Display', sans-serif;
+
+  --fs-default: .9375rem;
+
+  --fw-regular: 400;
+  --fw-bold: 700;
+}
+
 *,
 *::after,
 *::before {
