--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   --clr-primary-400:hsl(31, 77%, 52%);
   --clr-primary-700: hsl(184, 100%, 22%);
   --clr-primary-900: hsl(179, 100%, 13%);
-  --clr-neutral-100: hsl(0, 0%, 95%);
-  --clr-neutral-200: hsla(0, 0%, 100%, 0.75);
+  --clr-neutral-200: hsl(0, 0%, 95%);
+  --clr-neutral-100: hsla(0, 0%, 100%, 0.75);
 
   --ff-base: 'Lexend Deca', sans-serif;
   --ff-accent: 'Big Shoulders Display', sans-serif;
@@ -14,21 +14,34 @@
   --fw-bold: 700;
 }
 
+/* Intuitive box-sizing model */
 *,
 *::after,
 *::before {
   box-sizing: border-box;
+}
+
+/* Remove elements default margins */
+*{
   margin: 0;
+}
+
+/* Responsive image elements */
+img, picture, svg{
+  max-width: 100%;
+  display: block;
+}
+
+/* Small line-height for headings */
+h1,h2,h3,h4,h5,h6{
+  line-height: 1.1;
 }
 
 body {
-  margin: 0;
-  background-color: hsl(0, 0%, 95%);
-  color: hsl(0, 0%, 95%);
+  background-color: var(--clr-neutral-200);
+  color: var(--clr-neutral-100);
   line-height: 1.5;
-}
 
-.content {
   min-height: 100svh;
   display: grid;
   place-items: center;
