--- a/style.css
+++ b/style.css
@@ -40,26 +40,19 @@ h1,h2,h3,h4,h5,h6{
 body {
   background-color: var(--clr-neutral-200);
   color: var(--clr-neutral-100);
+  font-family: var(--ff-base);
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-default);
   line-height: 1.5;
 
   min-height: 100svh;
   display: grid;
-  place-items: center;
+  place-content: center;
 }
 
-.container {
-  width: 20rem;
-  margin: 3rem 0rem;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 1.5rem;
-  padding: 2.5rem;
-}
+/* .card__column{
+  
+} */
 
 .sedan-card {
   background-color: hsl(31, 77%, 52%);
@@ -72,7 +65,7 @@ body {
   font-size: 2.2rem;
 }
 
-.card-description {
+.card__description {
   font-family: "Lexend Deca", sans-serif;
   color: hsla(0, 0%, 100%, 0.75);
 }
