--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@
   margin: 0;
 }
 
+a, button, input, select, textarea{
+  font: inherit;
+}
+
 /* Responsive image elements */
 img, picture, svg{
   max-width: 100%;
@@ -37,6 +41,7 @@ h1,h2,h3,h4,h5,h6{
   line-height: 1.1;
 }
 
+/* General styling */
 body {
   background-color: var(--clr-neutral-200);
   color: var(--clr-neutral-100);
@@ -50,11 +55,18 @@ body {
   place-content: center;
 }
 
-/* .card__column{
-  
-} */
+/* Card styling */
 
-.sedan-card {
+.card__column{
+  --content-spacing: 1rem;
+  --content-padding: 2rem;
+
+  padding: var(--content-padding);
+  display: grid;
+  gap: var(--content-spacing);
+}
+
+.card__column--sedan {
   background-color: hsl(31, 77%, 52%);
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -91,7 +103,7 @@ body {
   color: hsla(31, 77%, 52%, 0.8);
 }
 
-.suv-card {
+.card__column--suv {
   background-color: hsl(184, 100%, 22%);
 }
 
@@ -99,7 +111,7 @@ body {
   color: hsla(184, 100%, 22%, 0.8);
 }
 
-.luxury-card {
+.card__column--luxury {
   background-color: hsl(179, 100%, 13%);
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
