--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1,h2,h3,h4,h5,h6{
 /* General styling */
 body {
   background-color: var(--clr-neutral-200);
-  color: var(--clr-neutral-100);
+  /* color: var(--clr-neutral-200); */
   font-family: var(--ff-base);
   font-weight: var(--fw-regular);
   font-size: var(--fs-default);
@@ -64,12 +64,6 @@ body {
   padding: var(--content-padding);
   display: grid;
   gap: var(--content-spacing);
-}
-
-.card__column--sedan {
-  background-color: hsl(31, 77%, 52%);
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
 }
 
 .card-title {
@@ -103,22 +97,29 @@ body {
   color: hsla(31, 77%, 52%, 0.8);
 }
 
-.card__column--suv {
-  background-color: hsl(184, 100%, 22%);
-}
-
 .suv-card .btn {
   color: hsla(184, 100%, 22%, 0.8);
+}
+
+.luxury-card .btn {
+  color: hsla(179, 100%, 13%, 0.8);
+}
+
+/* Modifier classes */
+.card__column--sedan {
+  background-color: hsl(31, 77%, 52%);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.card__column--suv {
+  background-color: hsl(184, 100%, 22%);
 }
 
 .card__column--luxury {
   background-color: hsl(179, 100%, 13%);
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
-}
-
-.luxury-card .btn {
-  color: hsla(179, 100%, 13%, 0.8);
 }
 
 @media (min-width: 50rem) {
