--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1,h2,h3,h4,h5,h6{
 /* General styling */
 body {
   background-color: var(--clr-neutral-200);
-  /* color: var(--clr-neutral-200); */
+  color: var(--clr-neutral-200);
   font-family: var(--ff-base);
   font-weight: var(--fw-regular);
   font-size: var(--fs-default);
