--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   --clr-primary-400:hsl(31, 77%, 52%);
   --clr-primary-700: hsl(184, 100%, 22%);
   --clr-primary-900: hsl(179, 100%, 13%);
-  --clr-neutral-200: hsl(0, 0%, 95%);
-  --clr-neutral-100: hsla(0, 0%, 100%, 0.75);
+  --clr-neutral-100: hsl(0, 0%, 95%);
+  --clr-neutral-200: hsla(0, 0%, 100%, 0.75);
 
   --ff-base: 'Lexend Deca', sans-serif;
   --ff-accent: 'Big Shoulders Display', sans-serif;
@@ -43,8 +43,8 @@ h1,h2,h3,h4,h5,h6{
 
 /* General styling */
 body {
-  background-color: var(--clr-neutral-200);
-  color: var(--clr-neutral-200);
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-neutral-100);
   font-family: var(--ff-base);
   font-weight: var(--fw-regular);
   font-size: var(--fs-default);
@@ -67,18 +67,11 @@ body {
 }
 
 .card-title {
-  font-family: "Big Shoulders Display", sans-serif;
-  font-size: 2.2rem;
+  font-family: var(--ff-accent);
 }
 
 .card__description {
-  font-family: "Lexend Deca", sans-serif;
-  color: hsla(0, 0%, 100%, 0.75);
-}
-
-.car-icon {
-  max-width: 100%;
-  object-fit: cover;
+  color: var(--clr-neutral-200);
 }
 
 .btn {
