--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ body {
 }
 
 .btn {
-  display: inline-block;
   background-color: var(--clr-neutral-100);
   border-radius: var(--button-br);
   padding: 1em 2.5em;
@@ -90,23 +89,9 @@ body {
   font-weight: var(--fw-bold)
 }
 
-.sedan-card .btn {
-  color: hsla(31, 77%, 52%, 0.8);
-}
-
-.suv-card .btn {
-  color: hsla(184, 100%, 22%, 0.8);
-}
-
-.luxury-card .btn {
-  color: hsla(179, 100%, 13%, 0.8);
-}
-
 /* Modifier classes */
 .card__column--sedan {
   background-color: hsl(31, 77%, 52%);
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
 }
 
 .card__column--suv {
@@ -115,8 +100,18 @@ body {
 
 .card__column--luxury {
   background-color: hsl(179, 100%, 13%);
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+}
+
+.btn--sedan {
+  color: hsla(31, 77%, 52%, 0.8);
+}
+
+.btn--suv {
+  color: hsla(184, 100%, 22%, 0.8);
+}
+
+.btn--luxury {
+  color: hsla(179, 100%, 13%, 0.8);
 }
 
 @media (min-width: 50rem) {
