add border radius to card container

--- a/style.css
+++ b/style.css
@@ -58,6 +58,11 @@ body {
 
 /* Card styling */
 
+.card{
+  border-radius: 1rem;
+  overflow: hidden;
+}
+
 .card__column{
   --content-spacing: 1.5rem;
   --content-padding: 2rem;
