--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ body {
 }
 
 /* Card styling */
-
 .card{
   border-radius: 1rem;
   overflow: hidden;
@@ -78,6 +77,30 @@ body {
   gap: var(--content-spacing);
 }
 
+.card__content[data-icon="sedan"]::before {
+  content: '';
+  background-image: url("./images/icon-sedans.svg");
+  background-repeat: no-repeat;
+  width: 64px;
+  height: 40px;
+}
+
+.card__content[data-icon="suv"]::before {
+  content: '';
+  background-image: url("./images/icon-suvs.svg");
+  background-repeat: no-repeat;
+  width: 64px;
+  height: 40px;
+}
+
+.card__content[data-icon="luxury"]::before {
+  content: '';
+  background-image: url("./images/icon-luxury.svg");
+  background-repeat: no-repeat;
+  width: 64px;
+  height: 40px;
+}
+
 .card__title {
   font-family: var(--ff-accent);
   font-size: 2rem;
@@ -85,7 +108,6 @@ body {
 
 .card__description {
   color: var(--clr-neutral-200);
-  width: 26ch;
 }
 
 .btn {
