--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-:root{
-  --clr-primary-400:hsl(31, 77%, 52%);
+:root {
+  --clr-primary-400: hsl(31, 77%, 52%);
   --clr-primary-700: hsl(184, 100%, 22%);
   --clr-primary-900: hsl(179, 100%, 13%);
   --clr-neutral-100: hsl(0, 0%, 95%);
   --clr-neutral-200: hsla(0, 0%, 100%, 0.75);
 
-  --ff-base: 'Lexend Deca', sans-serif;
-  --ff-accent: 'Big Shoulders Display', sans-serif;
+  --ff-base: "Lexend Deca", sans-serif;
+  --ff-accent: "Big Shoulders Display", sans-serif;
 
-  --fs-default: .9375rem;
+  --fs-default: 0.9375rem;
 
   --fw-regular: 400;
   --fw-bold: 700;
@@ -22,22 +22,33 @@
 }
 
 /* Remove elements default margins */
-*{
+* {
   margin: 0;
 }
 
-a, button, input, select, textarea{
+a,
+button,
+input,
+select,
+textarea {
   font: inherit;
 }
 
 /* Responsive image elements */
-img, picture, svg{
+img,
+picture,
+svg {
   max-width: 100%;
   display: block;
 }
 
 /* Small line-height for headings */
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   line-height: 1.1;
 }
 
@@ -57,21 +68,21 @@ body {
 }
 
 /* Card styling */
-.card{
+.card {
   display: grid;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   overflow: hidden;
 }
 
-.card__column{
+.card__column {
   --content-spacing: 1.5rem;
   --content-padding: 3rem;
-  --button-br:2rem;
+  --button-br: 2rem;
 
   padding: var(--content-padding);
 }
 
-.card__content{
+.card__content {
   display: grid;
   gap: var(--content-spacing);
   justify-items: start;
@@ -80,21 +91,21 @@ body {
 }
 
 .card__content[data-icon="sedan"]::before {
-  content: '';
+  content: "";
   background-image: url("./images/icon-sedans.svg");
   width: 64px;
   height: 40px;
 }
 
 .card__content[data-icon="suv"]::before {
-  content: '';
+  content: "";
   background-image: url("./images/icon-suvs.svg");
   width: 64px;
   height: 40px;
 }
 
 .card__content[data-icon="luxury"]::before {
-  content: '';
+  content: "";
   background-image: url("./images/icon-luxury.svg");
   width: 64px;
   height: 40px;
@@ -103,7 +114,7 @@ body {
 .card__title {
   font-family: var(--ff-accent);
   font-size: 2.2rem;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
 }
 
 .card__description {
@@ -116,7 +127,7 @@ body {
   padding: 1em 2.5em;
   text-decoration: none;
   font-size: 0.8rem;
-  font-weight: var(--fw-bold)
+  font-weight: var(--fw-bold);
 }
 
 /* Modifier classes */
@@ -144,18 +155,27 @@ body {
   color: hsla(179, 100%, 13%, 0.8);
 }
 
-@media (min-width: 50em) {
+/* Utility classes */
+.visually-hidden:not(:focus):not(:active):not(:focus-within) {
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
 
-  .card{
+@media (min-width: 50em) {
+  .card {
     grid-template-columns: repeat(3, 1fr);
     max-width: 55rem;
   }
 
-  .card__column{
+  .card__column {
     --content-padding: 2.6rem;
   }
 
-  .btn{
+  .btn {
     margin-top: 4rem;
   }
 
