--- a/style.css
+++ b/style.css
@@ -69,6 +69,9 @@ body {
 
 /* Card styling */
 .car-list {
+  list-style: none;
+  padding: 0;
+
   display: grid;
   border-radius: 0.5rem;
   overflow: hidden;
