--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
 /* Card styling */
 .car-list {
   --content-spacing: 1.5rem;
-  --content-padding: 3rem;
+  --content-padding: 3rem 2.8rem;
   --button-br: 2rem;
   list-style: none;
   padding: 0;
