--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body {
 
   .btn:is(:hover, :focus) {
     background-color: transparent;
-    outline: 0.15rem solid hsl(0, 0%, 95%);
-    color: hsla(0, 0%, 95%, 0.9);
+    outline: 0.15rem solid var(--clr-neutral-100);
+    color: var(--clr-neutral-200);
   }
 }
